Fixed collapse choppy animation in mobile

--- a/client/src/Components/css/App.css
+++ b/client/src/Components/css/App.css
@@ -615,7 +615,7 @@ iframe {
 [ Responsive ]*/
 
 /* Mobile */
-@media only screen and (max-width: 768.1px) {
+@media only screen and (max-width: 799.999999px) {
   .wrap-login100 {
     padding-left: 15px;
     padding-right: 15px;
@@ -699,26 +699,6 @@ iframe {
 
   #number-filter-column-game_release {
     margin-left: 0;
-  }
-}
-
-/* Desktop */
-@media only screen and (min-width: 768.2px) {
-  .alert-validate::before {
-    visibility: visible;
-    opacity: 1;
-  }
-
-  /*   .steamIMG {
-    width: 20vw;
-  } */
-
-  .mobile-accordion {
-    display: none;
-  }
-
-  .sortable {
-    font-size: 2vw;
   }
 }
 
